fix overflow of tag, note and notebook names

--- a/app/assets/stylesheets/components/notebooks.scss
+++ b/app/assets/stylesheets/components/notebooks.scss
@@ -52,6 +52,10 @@
         font-family: 'Raleway';
         color: #4a4a4a;
         font-size: 16px;
+        width: 370px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
 
       span {
