--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -42,6 +42,10 @@
   h1 {
     font-weight: bold;
     color: #4a4a4a;
+    width: 270px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   span {
